# topbops

./: Cargo.toml  README.md
.github/workflows/: rust.yml  topbops-wasm.yml  topbops-web.yml  zeroflops-wasm.yml  zeroflops-web.yml
cosmos/: Cargo.toml
cosmos/src/: lib.rs
smashsort/: Cargo.toml
smashsort-wasm/: Cargo.toml
smashsort-wasm/src/: lib.rs
smashsort-web/: Cargo.toml
smashsort-web/src/: main.rs
smashsort/src/: lib.rs
spotify/: Cargo.toml
spotify/src/: lib.rs
topbops/: Cargo.toml
topbops-wasm/: Cargo.toml
topbops-wasm/pkg/: topbops_wasm.js  topbops_wasm_bg.wasm
topbops-wasm/src/: base.rs  bootstrap.rs  edit.rs  lib.rs  list.rs  random.rs  search.rs  tournament.rs
topbops-wasm/src/list/: item.rs
topbops-wasm/tests/: tournament.rs
topbops-wasm/www/: index.html
topbops-web/: Cargo.toml
topbops-web/src/: cosmos.rs  lib.rs  main.rs  query.rs  source.rs  spotify.rs
topbops-web/src/source/: setlist.rs  spotify.rs
topbops/src/: lib.rs
zeroflops/: Cargo.toml
zeroflops-wasm/: Cargo.toml
zeroflops-wasm/pkg/: zeroflops_wasm.js  zeroflops_wasm_bg.wasm
zeroflops-wasm/src/: app.rs  base.rs  bootstrap.rs  dataframe.rs  docs.rs  edit.rs  home.rs  lib.rs  list.rs  plot.rs  random.rs  search.rs  settings.rs  tournament.rs
zeroflops-wasm/src/integrations/: spotify.rs
zeroflops-wasm/src/list/: item.rs
zeroflops-wasm/tests/: lib.rs  tournament.rs
zeroflops-wasm/www/: index.html
zeroflops-web/: Cargo.toml
zeroflops-web/src/: cosmos.rs  lib.rs  main.rs  query.rs  source.rs  user.rs
zeroflops-web/src/source/: setlist.rs  spotify.rs
zeroflops-web/tests/: integration_test.rs
zeroflops/src/: lib.rs  spotify.rs  storage.rs
