[workspace]
members = ["zeroflops-web"]
exclude = ["zeroflops-wasm"]

[workspace.dependencies]
async-trait = "0.1.68"
azure_core = "0.4.0"
azure_data_cosmos = "0.5.0"
futures = "0.3.19"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlparser = "0"
