[workspace]
members = ["zeroflops-web"]
exclude = ["zeroflops-wasm"]

[workspace.dependencies]
arrow2 = "0.17.0"
async-trait = "0.1.68"
axum = "0.7.4"
azure_core = "0.4.0"
azure_data_cosmos = "0.5.0"
futures = "0.3.19"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
rusqlite = { version = "0.30.0", features = ["serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_arrow = "0.10.0"
serde_json = "1.0"
serde_rusqlite = "0.34.0"
sqlparser = "0"
