[package]
name = "smashsort-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = { version = "0.1.0", git = "https://github.com/bngo92/azure-sdk-for-rust" }
azure_data_cosmos = { version = "0.1.0", git = "https://github.com/bngo92/azure-sdk-for-rust" }
futures = "0.3.19"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sqlparser = { version = "0", features = ["serde"] }
uuid = { version = "0.8", features = ["v4"] }
url = "2"

[features]
dev = []
