[package]
name = "smashsort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_data_cosmos = { version = "0.1.0", git = "https://github.com/bngo92/azure-sdk-for-rust" }
serde = { version = "1.0", features = ["derive"] }
