[package]
name = "topbops-wasm"
version = "0.1.0"
authors = ["Bryan Ngo <bngo92@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
futures = "0"
getrandom = { version = "0.2.2", features = [ "js" ] }
rand = "0.8.3"
regex = "1"
serde = { version = "1.0.80", features = ["derive"] }
topbops = { path = "../topbops/" }
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"]  }
wasm-bindgen-futures = "0.4.28"
yew = "0.19"
yew-router = "0.16"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'HtmlDocument',
  'HtmlSelectElement',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
]
