[package]
name = "topbops-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = "0.4.0"
azure_data_cosmos = "0.5.0"
futures = "0.3.19"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sqlparser = { version = "0", features = ["serde"] }
topbops = { path = "../topbops/", features = ["azure"] }
uuid = { version = "0.8", features = ["v4"] }
url = "2"

[features]
dev = []
