[package]
name = "topbops"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_data_cosmos = { version = "0.4.0", git = "https://github.com/Azure/azure-sdk-for-rust", optional = true }
serde = { version = "1.0", features = ["derive"] }

[features]
azure = ["azure_data_cosmos"]
