[package]
name = "zeroflops-wasm"
version = "0.1.0"
authors = ["Bryan Ngo <bngo92@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
arrow = "50.0.0"
getrandom = { version = "0.2.12", features = ["js"] }
js-sys = "0.3.64"
plotters = { git = "https://github.com/plotters-rs/plotters", default-features = false, features = ["histogram", "line_series"] }
plotters-canvas = { git = "https://github.com/AE1020/plotters-canvas", rev = "aacc00b" }
rand = "0.8.3"
regex = "1"
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"]  }
wasm-bindgen-futures = "0.4.28"
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
zeroflops = { path = "../zeroflops/" }

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'HtmlSelectElement',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
]
