[package]
name = "zeroflops-web"
version = "0.1.0"
edition = "2021"
default-run = "zeroflops-web"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait.workspace = true
axum = "0.6.18"
axum-login = "0.5.0"
azure_core.workspace = true
azure_data_cosmos.workspace = true
base64 = "0.21.0"
cosmos = { path = "../cosmos/" }
eyre = "0.6.8"
futures.workspace = true
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
rand = { version = "0.8.4", features = ["min_const_gen"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
spotify = { path = "../spotify/" }
sqlparser = { version = "0", features = ["serde"] }
time = { version = "0.3.21", features = ["formatting"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing-subscriber = "0.3.17"
urlencoding = "2.1.2"
uuid = { version = "0.8", features = ["v4"] }
zeroflops = { path = "../zeroflops/", features = ["hyper"] }

[features]
dev = []
