[package]
name = "zeroflops-web"
version = "0.1.0"
edition = "2021"
default-run = "zeroflops-web"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-array = "50.0.0"
arrow-ipc = "50.0.0"
arrow-schema.workspace = true
async-trait.workspace = true
axum.workspace = true
axum-login = "0.13.1"
azure_core = { workspace = true, optional = true }
azure_data_cosmos = { workspace = true, optional = true }
base64 = "0.21.0"
futures.workspace = true
libsqlite3-sys = "0.27.0"
password-auth = "1.0.0"
rand = { version = "0.8.4", features = ["min_const_gen"] }
reqwest = { workspace = true, features = ["blocking"] }
rusqlite = { workspace = true, features = ["limits"] }
serde = { version = "1.0", features = ["derive"] }
serde_arrow = { workspace = true, features = ["arrow-50"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_rusqlite.workspace = true
spotify = { path = "../spotify/" }
sqlparser = { workspace = true, features = ["serde"] }
time = { version = "0.3.21", features = ["formatting"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.1", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
urlencoding = "2.1.2"
uuid = { version = "0.8", features = ["v4"] }
zeroflops = { path = "../zeroflops/", features = ["full"] }

[features]
dev = []
azure = ["azure_core", "azure_data_cosmos"]

[dev-dependencies]
arrow = "50.0.0"
