[package]
name = "zeroflops"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", optional = true }
azure_core = { version = "0.4.0", optional = true }
azure_data_cosmos = { version = "0.5.0", optional = true }
hyper = { version = "0.14", features = ["full"], optional = true }
serde.workspace = true
serde_json.workspace = true
sqlparser.workspace = true

[features]
hyper = ["dep:axum", "dep:azure_core", "dep:azure_data_cosmos", "dep:hyper"]
